Bug 147180 - Deleting a row/col with TC enabled makes the previous insertion disappear
Summary: Deleting a row/col with TC enabled makes the previous insertion disappear
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-02-04 11:06 UTC by Heiko Tietze
Modified: 2025-11-22 08:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2022-02-04 11:06:11 UTC
On a new document, enable track changes, insert a table (each inserted row is marked as an edit), and delete one row or column. This makes all TC disappear, both at the document and manage changes/sidebar.

Version: 7.3.0.3 / LibreOffice Community
Build ID: 30(Build:3)
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.3.0-2
Calc: threaded
Comment 1 Ezinne 2022-02-10 22:09:40 UTC
Reproducible in:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 845e53ea13b317bd8ef4dc42cd60ea51359f34ab
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Gabor Kelemen (Collabora) 2022-02-10 22:38:15 UTC
This started in 7.2:

https://git.libreoffice.org/core/+/05366b8e6683363688de8708a3d88cf144c7a2bf

author	László Németh <nemeth@numbertext.org>	Wed May 19 12:22:24 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Thu May 20 00:01:37 2021 +0200

tdf#60382 sw offapi: add change tracking of table/row deletion

Adding CC to: László Németh
Comment 3 László Németh 2022-02-11 10:05:03 UTC
(In reply to Gabor Kelemen (allotropia) from comment #2)
> This started in 7.2

Gábor: are you sure? LO 6.0.7 and 7.0 do the same for me. This seems to be the original problem of the (lack of the) table tracking.
Comment 4 Gabor Kelemen (Collabora) 2022-02-11 10:25:55 UTC
(In reply to László Németh from comment #3)
> (In reply to Gabor Kelemen (allotropia) from comment #2)
> > This started in 7.2
> 
> Gábor: are you sure? LO 6.0.7 and 7.0 do the same for me. This seems to be
> the original problem of the (lack of the) table tracking.

Yes, in old versions there was no CT entry made at all, so this must have started by adding support of table CT.
Now table CT is supported, but deleting a row removes the previous "Table inserted" CT entry. 
On the other hand, if I insert some text in the new table, then delete another row, that does not remove the two former CT entries.
Comment 5 László Németh 2022-02-11 11:14:10 UTC
(In reply to Gabor Kelemen (allotropia) from comment #4)
> (In reply to László Németh from comment #3)
> > (In reply to Gabor Kelemen (allotropia) from comment #2)
> > > This started in 7.2
> > 
> > Gábor: are you sure? LO 6.0.7 and 7.0 do the same for me. This seems to be
> > the original problem of the (lack of the) table tracking.
> 
> Yes, in old versions there was no CT entry made at all, so this must have
> started by adding support of table CT.
> Now table CT is supported, but deleting a row removes the previous "Table
> inserted" CT entry. 
> On the other hand, if I insert some text in the new table, then delete
> another row, that does not remove the two former CT entries.

In this case always was a CT entry, because the newly inserted table is there in a text range, containing the table and a new line. Otherwise it would be fine to unify it with the new tracked table rows: showing the empty table with blue cells, keeping that on the not deleted rows etc.
Comment 6 László Németh 2023-04-28 12:41:10 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/151169
Comment 7 Commit Notification 2023-05-02 15:06:52 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a9cf949efcfdb9eb459cabe1b9e15f993e789c73

tdf#147180 sw: fix lost change tracking of modified tables

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-05-08 11:34:52 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d3d1527c4cf8ab6675d42d02cf313796398b220

tdf#147180 sw: fix lost change tracking of empty rows

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2023-05-24 13:14:09 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f3aab159f1c1e00c25e6b4ca1e50813bc343f4f3
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded