tdf#147180 sw: fix lost change tracking of modified tables

Tracked text insertion can contain tables in a single
redline (i.e. change), e.g. in case of newly inserted
or deleted tables. Editing this tracked table, e.g.
typing new text in a cell, deleting rows or columns
resulted loss of the change tracking of the table by
replacing the single redline over the table with
redlines within the cells. Now add tracked row changes
to the (not empty) table rows to keep change tracking
of the table.

Follow-up to commit 1555ba4dd9e90f0dfd39df952c3d2fd5e755e2f5
"tdf#150824 sw DOCX: fix export of new tracked tables" and
commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".

Change-Id: I8eb46b240c3f5036b5b0966e2a523e369cb02e41
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151169
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>